# xml-signer

./: AUTHORS  INSTALL.centos.in  Makefile.am  README.md  configure.ac  emulab.html  emulab.js  error.js  example.cred  example.password  example.pem  geni-auth.js  index.html  index.php  signer.css  signgenicred.js  test.cred  tool.html  tool.php  xml-signer.js  xml-signer.spec
debian/: README  README.Debian  README.source  changelog  control  copyright
etc/: apache2.conf.in  httpd-centos7.conf.in
lib/jsrsasign/: base64.js  index.html  rsa.js  rsa2.js  sha1.js  sha256.js  sha512.js
lib/jsrsasign/api/symbols/: X509.html
lib/xml-crypto/: enveloped-signature.js  exclusive-canonicalization.js  signed-xml.js  utils.js  xpath.js
lib/xmldom/: dom-parser.js  dom.js  sax.js
template/: authorize.html  credential.txt  no-key.html  non-abac-credential.txt
